# controllers/location/index.js
@@ -12,9 +12,24 @@ module.exports = (models) => {
       .then((messages) => res.status(200).json(messages))
       .catch((err) => res.status(400).send(err.message));
 
+  const deleteCountryLocation = (req, res) =>
+    models.locate
+      .deleteCountryLocation({ countryName: req.params.name })
+      .then(res.status(200).send({ message: success }))
+      .catch((err) => res.status(400).send(err.message));
+
   const addCountryLocation = (req, res) =>
     models.locate
       .addCountryLocation({ country: req.body })
+      .then(res.status(200).send({ message: success }))
+      .catch((err) => res.status(400).send(err.message));
+
+  const patchCountry = (req, res) =>
+    models.locate
+      .patchCountry({
+        countryName: req.params.name,
+        newName: req.body.countryName,
+      })
       .then(res.status(200).send({ message: success }))
       .catch((err) => res.status(400).send(err.message));
 
@@ -24,8 +39,10 @@ module.exports = (models) => {
    * Routes
    */
   const router = express.Router();
-  router.get("/name/:name", getLocation);
+  router.get("/country/:name", getLocation);
+  router.delete("/country/:name", deleteCountryLocation);
   router.post("/country", addCountryLocation);
+  router.patch("/country/:name", patchCountry);
 
   return router;
 };
