# country_swagger.yaml
@@ -19,7 +19,7 @@ tags:
 # ここからエンドポイントの記載
 #--------------------------------------------
 paths:
-  /location/name/{name}:
+  /location/country/:name:
     get:
       tags:
         - location
@@ -45,7 +45,7 @@ paths:
                     latitude: 36
                     longitude: 138
         400:
-          description: "パスがない場合"
+          description: "パスが誤りの場合"
           content:
             application/json:
               schema:
@@ -60,26 +60,18 @@ paths:
                 type: object
                 example:
                   - message: "サーバーエラー発生"
-  /location/locate/{lat}/{lon}:
-    get:
+    delete:
       tags:
         - location
-      summary: 国の位置から国の名前を取得する
-      description: ・DBから国の名前を取得する。
+      summary: 渡された国名に該当する国の情報を削除する。
+      description: ・DBから渡された国名に該当する国の情報を削除する。
       parameters:
         - in: path
-          name: lat
-          description: 緯度
+          name: name
+          description: 国の名前
           schema:
-            type: number
+            type: string
           required: true
-        - in: path
-          name: lon
-          description: 経度
-          schema:
-            type: number
-          required: true
-
       responses:
         200:
           description: リクエストが成功した場合
@@ -88,15 +80,65 @@ paths:
               schema:
                 type: object
                 example:
-                  - name: Japan
+                  - message: "成功しました！"
         400:
-          description: "パスがない場合"
+          description: "パスが誤りの場合"
           content:
             application/json:
               schema:
                 type: object
                 example:
                   - message: "国名が誤っています"
+        500:
+          description: サーバーでシステムエラーが発生した場合
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  - message: "サーバーエラー発生"
+    patch:
+      tags:
+        - location
+      summary: 国の名前を変更する。
+      description: ・渡された国の国名を変更する。
+      parameters:
+        - in: path
+          name: name
+          description: 国の名前
+          schema:
+            type: string
+          required: true
+      requestBody:
+        description: 必須項目とする。
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                countryName:
+                  type: string
+                  description: 国名
+                  example: Sample
+      responses:
+        200:
+          description: リクエストが成功した場合
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  - countryName: "Japan"
+                    latitude: 36
+                    longitude: 138
+        400:
+          description: "パス誤りやバリデーションエラーの場合"
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  - message: "パスもしくは情報が誤っています"
         500:
           description: "サーバーでシステムエラーが発生した場合"
           content:
@@ -118,26 +160,10 @@ paths:
             schema:
               type: object
               properties:
-                code1:
-                  type: string
-                  description: 国コード(2文字)
-                  example: sa
-                code2:
-                  type: string
-                  description: 国コード(3文字)
-                  example: SAM
                 countryName:
                   type: string
                   description: 国名
-                  example: Sample
-                latitude:
-                  type: number
-                  description: 緯度
-                  example: 11
-                longitude:
-                  type: number
-                  description: 経度
-                  example: 30.2
+                  example: Sample2
       responses:
         200:
           description: リクエストが成功した場合
