# models/location/delete_location.js
@@ -1,0 +1,4 @@
+module.exports = (knex) => (params) =>
+  knex("locations")
+    .where("country_name", params.countryName)
+    .del();
